[gd_scene load_steps=20 format=4 uid="uid://bcbb1p248ib0m"]

[ext_resource type="Script" uid="uid://td6qfi2chxfb" path="res://spieler.gd" id="1_t2l3h"]
[ext_resource type="Texture2D" uid="uid://btynpvqym128y" path="res://du_0.png" id="2_e7fk4"]
[ext_resource type="Texture2D" uid="uid://dn0sle0queswn" path="res://du_1.png" id="2_se834"]
[ext_resource type="Texture2D" uid="uid://bliibuyula2ld" path="res://du_0_2.png" id="3_881sl"]
[ext_resource type="Texture2D" uid="uid://cjf8jlmsg1ru7" path="res://du_1_2.png" id="3_yf2th"]
[ext_resource type="Texture2D" uid="uid://22cij24i00mb" path="res://du_2.png" id="4_ca1ps"]
[ext_resource type="Script" uid="uid://bicscwsxrxixp" path="res://scaner.gd" id="5_0mhq2"]
[ext_resource type="Texture2D" uid="uid://c2ja6audj0l42" path="res://du_2_2.png" id="5_028ha"]
[ext_resource type="Texture2D" uid="uid://db8avc87qns8w" path="res://du_3.png" id="6_e7fk4"]
[ext_resource type="Texture2D" uid="uid://b5iiqf6cbj66a" path="res://du_3_2.png" id="7_881sl"]
[ext_resource type="Script" uid="uid://btxbk2d75syyi" path="res://haus.gd" id="10_wsrit"]
[ext_resource type="Texture2D" uid="uid://xvc3bv0v0yhv" path="res://altes_haus.png" id="11_nje2y"]
[ext_resource type="Script" uid="uid://b1ktjfgt80gqa" path="res://room.gd" id="12_0mhq2"]
[ext_resource type="Script" uid="uid://c1bxftikvr2be" path="res://signale.gd" id="14_0mhq2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wsrit"]
texture = ExtResource("11_nje2y")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_du8qw"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
sources/1 = SubResource("TileSetAtlasSource_wsrit")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nje2y"]
size = Vector2(945, 943)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2gw2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e7fk4")
}, {
"duration": 1.0,
"texture": ExtResource("3_881sl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_se834")
}, {
"duration": 1.0,
"texture": ExtResource("3_yf2th")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ca1ps")
}, {
"duration": 1.0,
"texture": ExtResource("5_028ha")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e7fk4")
}, {
"duration": 1.0,
"texture": ExtResource("7_881sl")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsrit"]
size = Vector2(81, 65)

[node name="Spiel" type="Node2D"]

[node name="Haus" type="Node2D" parent="."]
script = ExtResource("10_wsrit")

[node name="Räume_Baublan" type="Node2D" parent="Haus"]

[node name="Mauern" type="Node2D" parent="Haus/Räume_Baublan"]

[node name="Wand1" type="TileMapLayer" parent="Haus/Räume_Baublan/Mauern"]
tile_map_data = PackedByteArray("AAAAAP//AQAEAAMAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")

[node name="Wand2" type="TileMapLayer" parent="Haus/Räume_Baublan/Mauern"]
tile_map_data = PackedByteArray("AAD/////AQADAAIAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")

[node name="Wand3" type="TileMapLayer" parent="Haus/Räume_Baublan/Mauern"]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAMAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")

[node name="Wand4" type="TileMapLayer" parent="Haus/Räume_Baublan/Mauern"]
tile_map_data = PackedByteArray("AAAAAP//AQADAAIAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")

[node name="Sackgassen" type="Node2D" parent="Haus/Räume_Baublan"]

[node name="Sackgasse1" type="TileMapLayer" parent="Haus/Räume_Baublan/Sackgassen"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQACAAAAAAADAAMAAQACAAAAAFD8/wMAAQACAAAAADD8//z/AQACAAAAAGD/////AQACAAIAAGAAAP//AQACAAIAAAAAAAAAAQACAAIAAFD//wAAAQACAAIAADD9//z/AQABAAAAAAD+//z/AQABAAAAAAD///z/AQABAAAAAAAAAPz/AQABAAAAAAABAPz/AQABAAAAAAACAPz/AQABAAAAAAADAP3/AQABAAAAAFADAP7/AQABAAAAAFADAP//AQABAAAAAFADAAAAAQABAAAAAFADAAEAAQABAAAAAFADAAIAAQABAAAAAFACAAMAAQABAAAAADABAAMAAQABAAAAADAAAAMAAQABAAAAADD//wMAAQABAAAAADD+/wMAAQABAAAAADD9/wMAAQABAAAAADD8/wIAAQABAAAAAGD8/wEAAQABAAAAAGD8/wAAAQABAAAAAGD8////AQABAAAAAGD8//7/AQABAAAAAGD8//3/AQABAAAAAGD+/wAAAQABAAAAAFD+////AQABAAAAAFD+//7/AQAAAAAAAAD+//3/AQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQABAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQABAAAAAAABAAEAAQAAAAAAAAABAAAAAQABAAAAAGABAP//AQABAAAAAGABAP7/AQAAAAAAAAABAP3/AQAAAAAAAAAAAP3/AQAAAAAAAAD///3/AQAAAAAAAAD///7/AQABAAAAADAAAP7/AQABAAAAADACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAABAAIAAQAAAAAAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAAAAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQADAAIAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAMAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQABAAMAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAACAP//AQAAAAAAAAAEAP//AQADAAIAAAAEAP7/AQADAAIAAAAAAPv/AQAEAAAAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="north" type="Marker2D" parent="Haus/Räume_Baublan/Sackgassen/Sackgasse1"]
position = Vector2(0, -160)

[node name="Sackgasse2" type="TileMapLayer" parent="Haus/Räume_Baublan/Sackgassen"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQAEAAEAAAADAAMAAQAEAAEAAAD8/wMAAQAEAAEAAAD8//z/AQAEAAEAAAD/////AQADAAEAAAAAAP//AQADAAEAAAAAAAAAAQADAAEAAAD//wAAAQADAAEAAAD9//z/AQAEAAEAAAD+//z/AQAEAAEAAAD///z/AQAEAAEAAAAAAPz/AQAEAAEAAAABAPz/AQAEAAEAAAACAPz/AQAEAAEAAAADAP3/AQAEAAEAAAADAP7/AQAEAAEAAAADAP//AQAEAAEAAAADAAAAAQAEAAEAAAADAAEAAQAEAAEAAAADAAIAAQAEAAEAAAACAAMAAQAEAAEAAAABAAMAAQAEAAEAAAAAAAMAAQAEAAEAAAD//wMAAQAEAAEAAAD+/wMAAQAEAAEAAAD9/wMAAQAEAAEAAAD8/wIAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAEAAEAAAD8////AQAEAAEAAAD8//7/AQAEAAEAAAD8//3/AQAEAAEAAAD+/wAAAQADAAAAAAD+////AQADAAAAAAD+//7/AQAEAAEAAAD+//3/AQAEAAEAAAD9//3/AQAEAAEAAAD9//7/AQAEAAEAAAD9////AQAEAAEAAAD9/wAAAQAEAAEAAAD9/wEAAQAEAAEAAAD9/wIAAQAEAAEAAAD+/wIAAQAEAAEAAAD+/wEAAQAEAAEAAAD//wEAAQADAAAAAAD//wIAAQAEAAEAAAAAAAIAAQAEAAEAAAAAAAEAAQADAAAAAAABAAEAAQAEAAEAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAABAP7/AQAEAAEAAAABAP3/AQAEAAEAAAAAAP3/AQAEAAEAAAD///3/AQAEAAEAAAD///7/AQADAAAAAAAAAP7/AQADAAAAAAACAP3/AQAEAAEAAAACAP7/AQAEAAEAAAACAP//AQAEAAEAAAACAAAAAQAEAAEAAAACAAEAAQAEAAEAAAACAAIAAQAEAAEAAAABAAIAAQAEAAEAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAP7/AQADAAIAAAAEAAAAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQADAAIAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAMAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQABAAMAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAAAAPv/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAAEAP//AQAEAAAAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="east" type="Marker2D" parent="Haus/Räume_Baublan/Sackgassen/Sackgasse2"]
position = Vector2(-160, 1)

[node name="Sackgasse3" type="TileMapLayer" parent="Haus/Räume_Baublan/Sackgassen"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQAEAAEAAAADAAMAAQAEAAEAAAD8/wMAAQAEAAEAAAD8//z/AQAEAAEAAAD/////AQADAAEAAAAAAP//AQADAAEAAAAAAAAAAQADAAEAAAD//wAAAQADAAEAAAD9//z/AQAEAAEAAAD+//z/AQAEAAEAAAD///z/AQAEAAEAAAAAAPz/AQAEAAEAAAABAPz/AQAEAAEAAAACAPz/AQAEAAEAAAADAP3/AQAEAAEAAAADAP7/AQAEAAEAAAADAP//AQAEAAEAAAADAAAAAQAEAAEAAAADAAEAAQAEAAEAAAADAAIAAQAEAAEAAAACAAMAAQAEAAEAAAABAAMAAQAEAAEAAAAAAAMAAQAEAAEAAAD//wMAAQAEAAEAAAD+/wMAAQAEAAEAAAD9/wMAAQAEAAEAAAD8/wIAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAEAAEAAAD8////AQAEAAEAAAD8//7/AQAEAAEAAAD8//3/AQAEAAEAAAD+/wAAAQADAAAAAAD+////AQADAAAAAAD+//7/AQAEAAEAAAD+//3/AQAEAAEAAAD9//3/AQAEAAEAAAD9//7/AQAEAAEAAAD9////AQAEAAEAAAD9/wAAAQAEAAEAAAD9/wEAAQAEAAEAAAD9/wIAAQAEAAEAAAD+/wIAAQAEAAEAAAD+/wEAAQAEAAEAAAD//wEAAQADAAAAAAD//wIAAQAEAAEAAAAAAAIAAQAEAAEAAAAAAAEAAQADAAAAAAABAAEAAQAEAAEAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAABAP7/AQAEAAEAAAABAP3/AQAEAAEAAAAAAP3/AQAEAAEAAAD///3/AQAEAAEAAAD///7/AQADAAAAAAAAAP7/AQADAAAAAAACAP3/AQAEAAEAAAACAP7/AQAEAAEAAAACAP//AQAEAAEAAAACAAAAAQAEAAEAAAACAAEAAQAEAAEAAAACAAIAAQAEAAEAAAABAAIAAQAEAAEAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAP7/AQADAAIAAAAEAAAAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQAEAAAAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAMAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQABAAMAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAAAAPv/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAAEAP//AQADAAIAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="west" type="Marker2D" parent="Haus/Räume_Baublan/Sackgassen/Sackgasse3"]
position = Vector2(-160, 0)

[node name="Sackgasse4" type="TileMapLayer" parent="Haus/Räume_Baublan/Sackgassen"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQAEAAEAAAADAAMAAQAEAAEAAAD8/wMAAQAEAAEAAAD8//z/AQAEAAEAAAD/////AQABAAEAAAAAAP//AQABAAEAAAAAAAAAAQABAAEAAAD//wAAAQABAAEAAAD9//z/AQAEAAEAAAD+//z/AQAEAAEAAAD///z/AQAEAAEAAAAAAPz/AQAEAAEAAAABAPz/AQAEAAEAAAACAPz/AQAEAAEAAAADAP3/AQAEAAEAAAADAP7/AQAEAAEAAAADAP//AQAEAAEAAAADAAAAAQAEAAEAAAADAAEAAQAEAAEAAAADAAIAAQAEAAEAAAACAAMAAQAEAAEAAAABAAMAAQAEAAEAAAAAAAMAAQAEAAEAAAD//wMAAQAEAAEAAAD+/wMAAQAEAAEAAAD9/wMAAQAEAAEAAAD8/wIAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAEAAEAAAD8////AQAEAAEAAAD8//7/AQAEAAEAAAD8//3/AQAEAAEAAAD+/wAAAQADAAAAAAD+////AQADAAAAAAD+//7/AQAEAAEAAAD+//3/AQAEAAEAAAD9//3/AQAEAAEAAAD9//7/AQAEAAEAAAD9////AQAEAAEAAAD9/wAAAQAEAAEAAAD9/wEAAQAEAAEAAAD9/wIAAQAEAAEAAAD+/wIAAQAEAAEAAAD+/wEAAQAEAAEAAAD//wEAAQADAAAAAAD//wIAAQAEAAEAAAAAAAIAAQAEAAEAAAAAAAEAAQADAAAAAAABAAEAAQAEAAEAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAABAP7/AQAEAAEAAAABAP3/AQAEAAEAAAAAAP3/AQAEAAEAAAD///3/AQAEAAEAAAD///7/AQADAAAAAAAAAP7/AQADAAAAAAACAP3/AQAEAAEAAAACAP7/AQAEAAEAAAACAP//AQAEAAEAAAACAAAAAQAEAAEAAAACAAEAAQAEAAEAAAACAAIAAQAEAAEAAAABAAIAAQAEAAEAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAP7/AQADAAIAAAAEAP//AQADAAIAAAAEAAAAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQADAAIAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAAAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQABAAMAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAAAAPv/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="south" type="Marker2D" parent="Haus/Räume_Baublan/Sackgassen/Sackgasse4"]
position = Vector2(32, 160)

[node name="Räume" type="Node2D" parent="Haus/Räume_Baublan"]

[node name="Raum1" type="TileMapLayer" parent="Haus/Räume_Baublan/Räume"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQAEAAEAAAADAAMAAQAEAAEAAAD8/wMAAQAEAAEAAAD8//z/AQAEAAEAAAD/////AQADAAEAAAAAAP//AQADAAEAAAAAAAAAAQADAAEAAAD//wAAAQADAAEAAAD9//z/AQAEAAEAAAD+//z/AQAEAAEAAAD///z/AQAEAAEAAAAAAPz/AQAEAAEAAAABAPz/AQAEAAEAAAACAPz/AQAEAAEAAAADAP3/AQAEAAEAAAADAP7/AQAEAAEAAAADAP//AQAEAAEAAAADAAAAAQAEAAEAAAADAAEAAQAEAAEAAAADAAIAAQAEAAEAAAACAAMAAQAEAAEAAAABAAMAAQAEAAEAAAAAAAMAAQAEAAEAAAD//wMAAQAEAAEAAAD+/wMAAQAEAAEAAAD9/wMAAQAEAAEAAAD8/wIAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAEAAEAAAD8////AQAEAAEAAAD8//7/AQAEAAEAAAD8//3/AQAEAAEAAAD+/wAAAQADAAAAAAD+////AQADAAAAAAD+//7/AQAEAAEAAAD+//3/AQAEAAEAAAD9//3/AQAEAAEAAAD9//7/AQAEAAEAAAD9////AQAEAAEAAAD9/wAAAQAEAAEAAAD9/wEAAQAEAAEAAAD9/wIAAQAEAAEAAAD+/wIAAQAEAAEAAAD+/wEAAQAEAAEAAAD//wEAAQADAAAAAAD//wIAAQAEAAEAAAAAAAIAAQAEAAEAAAAAAAEAAQADAAAAAAABAAEAAQAEAAEAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAABAP7/AQAEAAEAAAABAP3/AQAEAAEAAAAAAP3/AQAEAAEAAAD///3/AQAEAAEAAAD///7/AQADAAAAAAAAAP7/AQADAAAAAAACAP3/AQAEAAEAAAACAP7/AQAEAAEAAAACAP//AQAEAAEAAAACAAAAAQAEAAEAAAACAAEAAQAEAAEAAAACAAIAAQAEAAEAAAABAAIAAQAEAAEAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAP7/AQADAAIAAAAEAAAAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQAEAAAAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAAAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQABAAMAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAAAAPv/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAAEAP//AQAEAAAAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="south" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum1"]
position = Vector2(32, 160)

[node name="east" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum1"]
position = Vector2(160, 0)

[node name="west" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum1"]
position = Vector2(-160, 0)

[node name="Raum2" type="TileMapLayer" parent="Haus/Räume_Baublan/Räume"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQAEAAEAAAADAAMAAQAEAAEAAAD8/wMAAQAEAAEAAAD8//z/AQAEAAEAAAD/////AQADAAEAAAAAAP//AQADAAEAAAAAAAAAAQADAAEAAAD//wAAAQADAAEAAAD9//z/AQAEAAEAAAD+//z/AQAEAAEAAAD///z/AQAEAAEAAAAAAPz/AQAEAAEAAAABAPz/AQAEAAEAAAACAPz/AQAEAAEAAAADAP3/AQAEAAEAAAADAP7/AQAEAAEAAAADAP//AQAEAAEAAAADAAAAAQAEAAEAAAADAAEAAQAEAAEAAAADAAIAAQAEAAEAAAACAAMAAQAEAAEAAAABAAMAAQAEAAEAAAAAAAMAAQAEAAEAAAD//wMAAQAEAAEAAAD+/wMAAQAEAAEAAAD9/wMAAQAEAAEAAAD8/wIAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAEAAEAAAD8////AQAEAAEAAAD8//7/AQAEAAEAAAD8//3/AQAEAAEAAAD+/wAAAQADAAAAAAD+////AQADAAAAAAD+//7/AQAEAAEAAAD+//3/AQAEAAEAAAD9//3/AQAEAAEAAAD9//7/AQAEAAEAAAD9////AQAEAAEAAAD9/wAAAQAEAAEAAAD9/wEAAQAEAAEAAAD9/wIAAQAEAAEAAAD+/wIAAQAEAAEAAAD+/wEAAQAEAAEAAAD//wEAAQADAAAAAAD//wIAAQAEAAEAAAAAAAIAAQAEAAEAAAAAAAEAAQADAAAAAAABAAEAAQAEAAEAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAABAP7/AQAEAAEAAAABAP3/AQAEAAEAAAAAAP3/AQAEAAEAAAD///3/AQAEAAEAAAD///7/AQADAAAAAAAAAP7/AQADAAAAAAACAP3/AQAEAAEAAAACAP7/AQAEAAEAAAACAP//AQAEAAEAAAACAAAAAQAEAAEAAAACAAEAAQAEAAEAAAACAAIAAQAEAAEAAAABAAIAAQAEAAEAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAP7/AQADAAIAAAAEAAAAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQAEAAAAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAAAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQAEAAAAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAAAAPv/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAAEAP//AQAEAAAAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="south" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum2"]
position = Vector2(32, 160)

[node name="east" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum2"]
position = Vector2(160, 0)

[node name="west" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum2"]
position = Vector2(-160, 0)

[node name="north" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum2"]
position = Vector2(-128, -160)

[node name="Raum3" type="TileMapLayer" parent="Haus/Räume_Baublan/Räume"]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAADAPz/AQAEAAEAAAADAAMAAQAEAAEAAAD8/wMAAQAEAAEAAAD8//z/AQAEAAEAAAD/////AQADAAEAAAAAAP//AQADAAEAAAAAAAAAAQADAAEAAAD//wAAAQADAAEAAAD9//z/AQAEAAEAAAD+//z/AQAEAAEAAAD///z/AQAEAAEAAAAAAPz/AQAEAAEAAAABAPz/AQAEAAEAAAACAPz/AQAEAAEAAAADAP3/AQAEAAEAAAADAP7/AQAEAAEAAAADAP//AQAEAAEAAAADAAAAAQAEAAEAAAADAAEAAQAEAAEAAAADAAIAAQAEAAEAAAACAAMAAQAEAAEAAAABAAMAAQAEAAEAAAAAAAMAAQAEAAEAAAD//wMAAQAEAAEAAAD+/wMAAQAEAAEAAAD9/wMAAQAEAAEAAAD8/wIAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAEAAEAAAD8////AQAEAAEAAAD8//7/AQAEAAEAAAD8//3/AQAEAAEAAAD+/wAAAQADAAAAAAD+////AQADAAAAAAD+//7/AQAEAAEAAAD+//3/AQAEAAEAAAD9//3/AQAEAAEAAAD9//7/AQAEAAEAAAD9////AQAEAAEAAAD9/wAAAQAEAAEAAAD9/wEAAQAEAAEAAAD9/wIAAQAEAAEAAAD+/wIAAQAEAAEAAAD+/wEAAQAEAAEAAAD//wEAAQADAAAAAAD//wIAAQAEAAEAAAAAAAIAAQAEAAEAAAAAAAEAAQADAAAAAAABAAEAAQAEAAEAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAABAP7/AQAEAAEAAAABAP3/AQAEAAEAAAAAAP3/AQAEAAEAAAD///3/AQAEAAEAAAD///7/AQADAAAAAAAAAP7/AQADAAAAAAACAP3/AQAEAAEAAAACAP7/AQAEAAEAAAACAP//AQAEAAEAAAACAAAAAQAEAAEAAAACAAEAAQAEAAEAAAACAAIAAQAEAAEAAAABAAIAAQAEAAEAAAAEAPz/AQADAAIAAAAEAP3/AQADAAIAAAAEAP7/AQADAAIAAAAEAAAAAQAEAAAAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAD7//z/AQADAAIAAAD7//3/AQADAAIAAAD7//7/AQADAAIAAAD7////AQADAAIAAAD7/wAAAQADAAIAAAD7/wEAAQADAAIAAAD7/wIAAQADAAIAAAD7/wMAAQADAAIAAAAEAAQAAQAEAAIAAAD7/wQAAQAEAAIAABD8/wQAAQAEAAMAAAD9/wQAAQAEAAMAAAD+/wQAAQAEAAMAAAD//wQAAQAEAAMAAAAAAAQAAQAEAAMAAAABAAQAAQAEAAAAAAACAAQAAQAEAAMAAAADAAQAAQAEAAMAAAAEAPv/AQACAAMAAAD7//v/AQACAAMAABD8//v/AQABAAMAAAD9//v/AQABAAMAAAD+//v/AQABAAMAAAD///v/AQABAAMAAAAAAPv/AQABAAMAAAABAPv/AQABAAMAAAACAPv/AQABAAMAAAADAPv/AQABAAMAAAAEAP//AQADAAIAAAA=")
enabled = false
tile_set = SubResource("TileSet_du8qw")
script = ExtResource("12_0mhq2")

[node name="south" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum3"]
position = Vector2(32, 160)

[node name="east" type="Marker2D" parent="Haus/Räume_Baublan/Räume/Raum3"]
position = Vector2(160, 32)

[node name="Räume_Gebaut" type="Node2D" parent="Haus"]

[node name="Scaner" type="Area2D" parent="Haus"]
collision_layer = 3
collision_mask = 3
script = ExtResource("5_0mhq2")

[node name="Scaner" type="CollisionShape2D" parent="Haus/Scaner"]
position = Vector2(-2.5, 1.5)
shape = SubResource("RectangleShape2D_nje2y")

[node name="Spieler" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_t2l3h")
tempo = 40

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Spieler"]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_w2gw2")
animation = &"idle"

[node name="Camera2D" type="Camera2D" parent="Spieler"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spieler"]
position = Vector2(0.5, 14.5)
shape = SubResource("RectangleShape2D_wsrit")

[node name="Signale" type="Node" parent="."]
script = ExtResource("14_0mhq2")
